2008-02-11  Douglas Gregor  <doug.gregor@gmail.com>

PR c++/35113
       * tree.c (cp_build_qualified_type_real): When building a
       cv-qualified array type, build it as a unique type with
       build_cplus_array_type_1 and then adopt the unqualified type's
       main variant.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@132242 138bc75d-0d04-0410-961f-82ee72b054a4